feat(login): include "verify" email flow if setting up alias
